[gd_scene load_steps=3 format=3 uid="uid://dxrpi4dct4ebe"]

[ext_resource type="Script" path="res://explorer_client.gd" id="1_3qlha"]
[ext_resource type="PackedScene" uid="uid://u2h8kgq5523x" path="res://connect_wallet.tscn" id="2_d1mdp"]

[node name="ExplorerClient" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_3qlha")

[node name="Input" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="ConnectWallet" parent="Input" instance=ExtResource("2_d1mdp")]
layout_mode = 2

[node name="Label" type="Label" parent="Input"]
layout_mode = 2
text = "Send Message"
horizontal_alignment = 1

[node name="MessageBox" type="TextEdit" parent="Input"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "Enter message here
"

[node name="Send" type="Button" parent="Input"]
layout_mode = 2
size_flags_horizontal = 4
text = "Send"

[node name="Events" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="Refresh" type="Button" parent="Events"]
layout_mode = 2
size_flags_horizontal = 4
text = "Refresh
"

[node name="Notices" type="VBoxContainer" parent="Events"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Events/Notices"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Events/Notices/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Notices
"
horizontal_alignment = 1

[node name="ItemList" type="ItemList" parent="Events/Notices"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
allow_search = false
auto_height = true
item_count = 3
item_0/text = "A"
item_0/selectable = false
item_1/text = "B"
item_1/selectable = false
item_2/text = "C"
item_2/selectable = false

[node name="Reports" type="VBoxContainer" parent="Events"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Events/Reports"]
layout_mode = 2
text = "Reports
"
horizontal_alignment = 1

[node name="ItemList" type="ItemList" parent="Events/Reports"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
allow_search = false
auto_height = true
item_count = 3
item_0/text = "A"
item_0/selectable = false
item_1/text = "B"
item_1/selectable = false
item_2/text = "C"
item_2/selectable = false

[node name="ViewVouchers" type="Button" parent="Events"]
layout_mode = 2
size_flags_horizontal = 4
text = "Vouchers"

[connection signal="pressed" from="Input/Send" to="." method="_on_send_input_pressed"]
[connection signal="pressed" from="Events/Refresh" to="." method="_on_refresh_pressed"]
[connection signal="pressed" from="Events/ViewVouchers" to="." method="_on_view_vouchers_pressed"]
